--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
         {{>header}}
     </div>
+    <p>This site was created by Aditya Kishore Jha. It uses data from mapbox.com and darksky.net.</p>
     {{>footer}}
 </body>
 
