--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,18 +2,16 @@
 
 <html>
     <title>About</title>
-<head>
-     <link rel="icon" href="/img/pic1.png">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+    <head>
+         <link rel="icon" href="/img/pic1.png">
+        <link rel="stylesheet" href="/css/styles.css">
+    </head>
 
-<body>
-    <div class="main-content">
-        {{>header}}
-    </div>
-    <p>This site was created by Aditya Kishore Jha. It uses data from mapbox.com and darksky.net.</p>
-    {{>footer}}
-</body>
-
-
+    <body>
+        <div class="main-content">
+            {{>header}}
+            <p>This site was created by Aditya Kishore Jha.</p>
+        </div>
+        {{>footer}}
+    </body>
 </html>
